// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App shoud not have any console errors 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`App should render the navbar 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Navbar should render correctly 1`] = `
<div>
  <div
    class="navbar"
  >
    <div
      class="container"
    >
      <div
        class="logotype"
      >
        <img
          alt="logotype"
          src="logotype.svg"
        />
      </div>
      <div
        class="search"
      >
        <div
          class="search-field"
        >
          <input
            class="search-bar"
            type="text"
            value=""
          />
          <button
            class="button"
            type="button"
          >
            <img
              alt="loopa"
              src="loopa.svg"
            />
          </button>
        </div>
      </div>
      <button
        class="metrics"
        type="button"
      >
        <span
          class="active"
        >
          °C
        </span>
        <span
          style="margin: 0px 5px;"
        >
          /
        </span>
        <span>
          °F
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render App components should render DetailedDailyDescription component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render hourly weather component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render hourlyWeather component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render the Navbar component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render the daily weather component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render the dailyWeather component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render the navbar 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;

exports[`Render App components should render the navbar component 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="navbar"
    >
      <div
        class="container"
      >
        <div
          class="logotype"
        >
          <img
            alt="logotype"
            src="logotype.svg"
          />
        </div>
        <div
          class="search"
        >
          <div
            class="search-field"
          >
            <input
              class="search-bar"
              type="text"
              value=""
            />
            <button
              class="button"
              type="button"
            >
              <img
                alt="loopa"
                src="loopa.svg"
              />
            </button>
          </div>
        </div>
        <button
          class="metrics"
          type="button"
        >
          <span
            class="active"
          >
            °C
          </span>
          <span
            style="margin: 0px 5px;"
          >
            /
          </span>
          <span>
            °F
          </span>
        </button>
      </div>
    </div>
    <div
      class="daily-weather"
    >
      hello
    </div>
  </div>
</div>
`;
